--- a/src/src4/templates/delete.html
+++ b/src/src4/templates/delete.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
-{% block titre %}Suppression d'un contact'{% endblock %}
+{% block titre %}Suppression d'un contact{% endblock %}
 
 {% block contenu %}
-Souhaitez vous réellement supprimer le contact
+
+Souhaitez vous réellement supprimer le contact: {{contact.nom}} {{contact.prenom}} ?
+<form method="post">
+    <button type="submit" value="Submit">Submit</button>
+</form>
 {% endblock %}
