--- a/src/src5/templates/index.html
+++ b/src/src5/templates/index.html
@@ -18,8 +18,8 @@
         <td>{{contact.tel}}</td>
         <td>{{contact.mail}}</td>
         <td>
-            <a href="./update/{{contact.id}}">Modification</a>  {# utilisation du champ id #}
-            <a href="./delete/{{contact.id}}">Suppression</a>   {# utilisation du champ id #}
+            <a href="./update/{{contact.id}}">Modification</a>
+            <a href="./delete/{{contact.id}}">Suppression</a>  
         </td>
     </tr>
     {% endfor %}
